syntax = "proto3";

package messages;

option go_package= "./messages";

message Keys {
  int64 amount = 1;
}

message Ack {
  int64 ack = 1;
}

service MessageService {
  rpc SendAvailableKeys(Keys) returns (Ack) {}
  rpc SendNonDelivered(Keys) returns (Ack) {}
}